# fibmeasure

./: .gitignore  pyproject.toml  requiements.txt
fibmeasure/: main.py
fibmeasure/app/: main.py
fibmeasure/app/assets/: __init__.py  transform_views.yaml
fibmeasure/app/core/: transform_handler.py  vtransforms.py
fibmeasure/app/pluggins/: button.py
fibmeasure/app/ui/: transform_view.py  upload_view.py
fibmeasure/assets/: transform_views.yaml
fibmeasure/core/: base.py  ops.py  transform_handler.py  transforms.py  utils.py  vtransforms.py
fibmeasure/fitting/: base.py  ops.py  transforms.py
fibmeasure/profiling/: __init__.py  line_profiler.py
fibmeasure/ui/: pluggins.py  transform_view.py  upload_view.py
notebooks/: skeletonize.ipynb
