[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'fibmeasure'
dynamic = ['dependencies', 'version']
description = "Fiber mesurement tools"
readme = 'README.md'
requires-python = '>=3.10'
license = { file = 'LICENSE' }
keywords = ['fiber', 'scipy']
authors = [
    {name='AnihilatorGun', email='nikitaushakov.nu35@gmail.com'}
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120
lines_after_imports = 2
profile = 'black'
combine_as_imports = true

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.dynamic]
version = { attr = 'fibmeasure.__version__.__version__' }
dependencies = { file = 'requirements.txt' }